--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
                             <img src="https://i.imgur.com/DgKW9KK.png" alt="Portfolio image 32" class="rounded-xl object-cover w-full h-full">
                         </button>
                     </div>
+                    
+                    <div class="grid grid-cols-4 gap-4 min-w-full">
+                        <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
+                            <img src="https://i.imgur.com/DRBVQP1.png" alt="Portfolio image 25" class="rounded-xl object-cover w-full h-full">
+                        </button>
+                        <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
+                            <img src="https://i.imgur.com/6eCIoRh.png" alt="Portfolio image 26" class="rounded-xl object-cover w-full h-full">
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Arrows -->
@@ -450,3 +459,4 @@
 </body>
 
 </html>
+
