--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <img src="https://i.imgur.com/lWxUCwa.jpeg" alt="Portfolio image 13" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/uCwvQFj.png" alt="Portfolio image 14" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/6eCIoRh.png" alt="Portfolio image 14" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
                             <img src="https://i.imgur.com/DsTdO5v.jpeg" alt="Portfolio image 15" class="rounded-xl object-cover w-full h-full">
@@ -154,7 +154,7 @@
                             <img src="https://i.imgur.com/nouU2N8.jpeg" alt="Portfolio image 17" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/5i9Jo9U.png" alt="Portfolio image 18" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/DRBVQP1.png" alt="Portfolio image 18" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
                             <img src="https://i.imgur.com/PsVa6vG.jpeg" alt="Portfolio image 19" class="rounded-xl object-cover w-full h-full">
@@ -459,4 +459,5 @@
 </body>
 
 </html>
+
 
