--- a/index.html
+++ b/index.html
@@ -95,112 +95,112 @@
                     <!-- Page 1 -->
                     <div class="grid grid-cols-4 gap-4 min-w-full">
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/e4VXNFr.png" alt="Portfolio image 1" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/TTQBxhb.png" alt="Portfolio image 1" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/3EED8S1.png" alt="Portfolio image 2" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/DRBVQP1.png" alt="Portfolio image 2" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://imgur.com/aaVBD0F.png" alt="Portfolio image 3" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/6eCIoRh.png" alt="Portfolio image 3" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/TTQBxhb.png" alt="Portfolio image 4" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/lWxUCwa.jpeg" alt="Portfolio image 4" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/yZiwymL.png" alt="Portfolio image 5" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/nknNM6c.jpeg" alt="Portfolio image 5" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/lnwJyIL.png" alt="Portfolio image 6" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/RTUlXdI.jpeg" alt="Portfolio image 6" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/ytmquAz.png" alt="Portfolio image 7" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/5Ylr7Ld.jpeg" alt="Portfolio image 7" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/ViLezVK.jpeg" alt="Portfolio image 8" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/O4S2oQH.jpeg" alt="Portfolio image 8" class="rounded-xl object-cover w-full h-full">
                         </button>
                     </div>
 
                     <!-- Page 2 -->
                     <div class="grid grid-cols-4 gap-4 min-w-full">
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/kHfArO6.jpeg" alt="Portfolio image 9" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/lnwJyIL.png" alt="Portfolio image 9" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/eKT6tLv.jpeg" alt="Portfolio image 10" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/ytmquAz.png" alt="Portfolio image 10" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/4LgWWoK.png" alt="Portfolio image 11" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/6DLn3Xw.png" alt="Portfolio image 11" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/p1qa5DW.jpeg" alt="Portfolio image 12" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/rGWKcGw.png" alt="Portfolio image 12" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/lWxUCwa.jpeg" alt="Portfolio image 13" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/TGMKCha.jpeg" alt="Portfolio image 13" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/6eCIoRh.png" alt="Portfolio image 14" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/3EED8S1.png" alt="Portfolio image 14" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/DsTdO5v.jpeg" alt="Portfolio image 15" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/Tir0hHY.png" alt="Portfolio image 15" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/yCPnUVl.jpeg" alt="Portfolio image 16" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/I9Gn2f2.jpeg" alt="Portfolio image 16" class="rounded-xl object-cover w-full h-full">
                         </button>
                     </div>
 
                     <!-- Page 3 -->
                     <div class="grid grid-cols-4 gap-4 min-w-full">
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/nouU2N8.jpeg" alt="Portfolio image 17" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/nAutytc.png" alt="Portfolio image 17" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/DRBVQP1.png" alt="Portfolio image 18" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/OgqGczO.png" alt="Portfolio image 18" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/PsVa6vG.jpeg" alt="Portfolio image 19" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/OjUyC95.png" alt="Portfolio image 19" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/O4S2oQH.jpeg" alt="Portfolio image 20" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/1gjv4Pp.png" alt="Portfolio image 20" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/Tir0hHY.png" alt="Portfolio image 21" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/4LgWWoK.png" alt="Portfolio image 21" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/1gjv4Pp.png" alt="Portfolio image 22" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/kHfArO6.jpeg" alt="Portfolio image 22" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/5Ylr7Ld.jpeg" alt="Portfolio image 23" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/e4VXNFr.png" alt="Portfolio image 23" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/rGWKcGw.png" alt="Portfolio image 24" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/OjUyC95.png" alt="Portfolio image 24" class="rounded-xl object-cover w-full h-full">
                         </button>
                     </div>
                     
                     <!-- Page 4 -->
                     <div class="grid grid-cols-4 gap-4 min-w-full">
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/RTUlXdI.jpeg" alt="Portfolio image 25" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/eKT6tLv.jpeg" alt="Portfolio image 25" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/nknNM6c.jpeg" alt="Portfolio image 26" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/p1qa5DW.jpeg" alt="Portfolio image 26" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/TGMKCha.jpeg" alt="Portfolio image 27" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/DsTdO5v.jpeg" alt="Portfolio image 27" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/6DLn3Xw.png" alt="Portfolio image 28" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/yCPnUVl.jpeg" alt="Portfolio image 28" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/nAutytc.png" alt="Portfolio image 29" class="rounded-xl object-cover w-full h-full">
+                            <img src="hhttps://i.imgur.com/nouU2N8.jpeg" alt="Portfolio image 29" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/OgqGczO.png" alt="Portfolio image 30" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/aaVBD0F.jpeg" alt="Portfolio image 30" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/OjUyC95.png" alt="Portfolio image 31" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/yZiwymL.png" alt="Portfolio image 31" class="rounded-xl object-cover w-full h-full">
                         </button>
                         <button type="button" class="project-btn rounded-xl overflow-hidden p-0 bg-transparent border-0 focus:outline-none">
-                            <img src="https://i.imgur.com/DgKW9KK.png" alt="Portfolio image 32" class="rounded-xl object-cover w-full h-full">
+                            <img src="https://i.imgur.com/ViLezVK.jpeg" alt="Portfolio image 32" class="rounded-xl object-cover w-full h-full">
                         </button>
                     </div>
                 </div>
@@ -450,6 +450,7 @@
 </body>
 
 </html>
+
 
 
 
